--- a/index.html
+++ b/index.html
@@ -10,10 +10,13 @@
 </head>
 <body>
 
+<template>
+
+</template>
+<div id="openweathermap-widget-11"></div>
+<script src='//openweathermap.org/themes/openweathermap/assets/vendor/owm/js/d3.min.js'></script><script>window.myWidgetParam ? window.myWidgetParam : window.myWidgetParam = [];  window.myWidgetParam.push({id: 11,cityid: '4298960',appid: '0624529f33603cdd04d328d40402fb19',units: 'metric',containerid: 'openweathermap-widget-11',  });  (function() {var script = document.createElement('script');script.async = true;script.charset = "utf-8";script.src = "//openweathermap.org/themes/openweathermap/assets/vendor/owm/js/weather-widget-generator.js";var s = document.getElementsByTagName('script')[0];s.parentNode.insertBefore(script, s);  })();</script>
     <input  id="city" type="text" name="city" value=""><br>
     <button id="submit" type="submit">Submit</button>
-
-
 <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 <script src="assets/js/script.js"></script>
 </body>
