--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <h2 id="cityName"></h2>
         </template>
         <header id="wrapper0">
-            <h1>Weatherman Joe</h1>
+            <h1 id="header">Weatherman Joe</h1>
             <h6><em>"You can always count on Joe!"</em></h6>
         </header>
         <main id="wrapper1">
